force-app/main/default/objects/Crossword_Attempt__c/Crossword_Attempt__c.object-meta.xml
<CustomObject>
    <label>Crossword Attempt</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Crossword Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crossword Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>