force-app/main/default/objects/Crossword_Attempt__c/fields/Crossword__c.field-meta.xml
<CustomField>
    <fullName>Crossword__c</fullName>
    <label>Crossword</label>
    <referenceTo>Crossword__c</referenceTo>
    <relationshipLabel>Attempts</relationshipLabel>
    <relationshipName>Crossword_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>