force-app/main/default/objects/Crossword_Attempt__c/fields/Last_Active_Clue_Answer_Pair_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Clue_Answer_Pair_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Last Active Clue-Answer Pair Id</label>
    <referenceTo>Crossword_Clue_Answer_Pair__c</referenceTo>
    <relationshipLabel>Crossword Attempts</relationshipLabel>
    <relationshipName>Crossword_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>