force-app/main/default/objects/Crossword_Attempt__c/fields/Last_Active_Square__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Square__c</fullName>
    <label>Last Active Square</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>