force-app/main/default/objects/Crossword_Attempt__c/fields/Minutes_Spent__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent__c</fullName>
    <label>Minutes Spent</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>