force-app/main/default/objects/Crossword_Attempt__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Crossword Attempts</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>